data/derived/fa15/progs/unify/prog2364.ml.out
Characters 104-115:
  digitalRoot 
  ^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type 'a
       The type variable 'a occurs inside int -> 'a
